Bug 1755153 p1 - Centralize saving of last used printer name. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D146943