toolkit/components/printing/content/printPageSetup.js
@@ -522,7 +522,7 @@ function onAccept() {
   // XXX Should we do this in nsPrintDialogServiceWin::ShowPageSetup (the code
   // that invokes us), since ShowPageSetup is where we do the saving for the
   // other platforms?
-  gPrintService.savePrintSettingsToPrefs(gPrintSettings, true, flags);
+  gPrintService.savePrintSettingsToPrefs(gPrintSettings, flags);
 }
 
 // ---------------------------------------------------
